--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 // //BASE 
 
 @import "base/base";
+@import "base/utils";
 
 
 // // COMPONENTS 
@@ -17,6 +18,8 @@
 @import "components/register";
 @import "components/sidebar";
 @import "components/home";
+@import "components/notes";
+@import "components/formNotes";
 
 
 
