--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,7 +6,7 @@
 $color-primary: #369970;
 $color-secondary: #67d1bd;
 $color-white: #ffffff;
-$color-black: #3F4E4F;
+$color-black: #3b3a3a;
 $color-bg:rgb(23, 23, 24);
 $color-bg-card:#ebe8e8;
 $color-green:#1fd455;
